# encryption

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
public/: wasm.js  wasm.wasm
src/: App.css  App.tsx
src/Component/: Entry.tsx  FileEncryption.tsx  Home.tsx  Icon.tsx  SelectEncryptionAlgorithm.tsx  TextEncryption.tsx
src/Component/EncryptionBtn/: Button.tsx  btn.module.css
src/hook/: index.ts
src/public/: wasm.js
src/script/: postInstall.cjs
src/wasm/: CMakeLists.txt  aes.c  aes.h  des.c  des.h  main.c  useWASM.ts  wasm.d.ts  wasm.js
wasm/: CMakeLists.txt  aes.h  main.c
